# Academic_ArtificialIntelligence

./: .gitattributes  .gitignore  Academic_AI.sln  LICENSE.md  README.md  dos2unix.sh  system_info.sh
0_Exam1/: filedata.txt  main.cpp
0_Exam1/header/: hanoi.h
0_Exam1_Hanoi/: Alternativas.txt  compile.sh  filedata.txt
0_Exam1_Hanoi/header/: hanoi.h
0_Exam1_Hanoi/src/: hanoi.cpp
0_Exam2_Graph/: CMakeLists.txt  filedata.txt  graph.cpp
0_Exam2_Graph/header/: grafo.h
0_Exam2_Graph/src/: grafo.cpp
0_Exam3_Nim/: compile.sh  filedata.txt  nim.cpp
0_Exam3_Nim/header/: nim.h
0_Exam3_Nim/src/: nim.cpp
10_Knapsack_BB/: 10_Knapsack_BB.cpp  10_Knapsack_BB.vcxproj  10_Knapsack_BB.vcxproj.filters  compile.sh  filedata.txt
10_Knapsack_BB/Knapsack_files/: 24.txt  4.txt
10_Knapsack_BB/header/: bb_backtracking.h  bb_seleccion_variable.h  mochila.h  problema_bb.h
10_Knapsack_BB/src/: mochila.cpp
11_GLPK/: Empaquetado_Balanceado_1.mod  Empaquetado_Balanceado_2.mod  Knapsack.mod  Sogatira.mod  compile.sh  compile_samples.sh
11_GLPK/samples/: Sogatira.mod  TSP.mod  ejemplo1.mod  ejemplo2.mod  ejemplo3.mod  ejemplo4.mod  ejemplo51.mod  ejemplo52.mod  ejemplo6.mod  queens.mod
12_TSP_Genetic/: 12_TSP_Genetic.cpp  12_TSP_Genetic.vcxproj  12_TSP_Genetic.vcxproj.filters  filedata.txt
12_TSP_Genetic/Ficheros_TSP/: berlin52.tsp  gr666.tsp  kroa100.tsp  rl5915.tsp  st70.tsp
12_TSP_Genetic/TSP_files/: test4.tsp
12_TSP_Genetic/header/: canvas.h  ciudades.h  controlador.h  dialogo_fichero_windows.h  genetico_tsp.h  genetico_tsp_impl.h  observador.h  panel.h  ruta.h  vista.h
12_TSP_Genetic/resources/: Black.txt
12_TSP_Genetic/src/: canvas.cpp  ciudades.cpp  controlador.cpp  dialogo_fichero_linux.cpp  dialogo_fichero_windows.cpp  panel.cpp  ruta.cpp  vista.cpp
13_OCR/: 13_OCR.cpp  13_OCR.vcxproj  13_OCR.vcxproj.filters  CMakeLists.txt  compile.sh  filedata.txt
13_OCR/cmake_modules/: FindTGUI.cmake
13_OCR/header/: controlador.h  knn.h  mnist.h  observador.h  sf_extension.h  vista.h
13_OCR/ignore/: knn.cpp  mnist.cpp
13_OCR/src/: controlador.cpp  knn.cpp  sf_extension.cpp  vista.cpp
1_Taquin/: 1_Taquin.cpp  1_Taquin.vcxproj  CMakeLists.txt  Stats.txt  compile.sh  filedata.txt
1_Taquin/include/: taquin.h
1_Taquin/other/: incomplete_taquin_recursive.cpp
1_Taquin/src/: taquin.cpp
2_Taquin/: 2_Taquin.cpp  2_Taquin.vcxproj  2_Taquin.vcxproj.filters  CMakeLists.txt  Stats.txt  compile.sh  filedata.txt
2_Taquin/header/: problema_busqueda_taquin.h  taquin.h
2_Taquin/src/: busqueda_a_estrella.cpp  busqueda_a_estrella_p_i.cpp  busqueda_amplitud.cpp  busqueda_profundidad.cpp  busqueda_profundizacion_iterativa.cpp  problema_busqueda_taquin.cpp  taquin.cpp
3_Trajectories/: 3_Trajectories.cpp  3_Trajectories.vcxproj  3_Trajectories.vcxproj.filters  CMakeLists.txt  README.md  compile.sh  explicacion.txt  filedata.txt
3_Trajectories/header/: busqueda_a_estrella.h  busqueda_amplitud.h  busqueda_coste_uniforme.h  busqueda_profundidad.h  busqueda_voraz.h  casilla.h  controlador.h  mapa.h  nodo_trayectoria.h  observador.h  problema_busqueda.h  rejilla.h  vista.h
3_Trajectories/src/: casilla.cpp  controlador.cpp  mapa.cpp  nodo_trayectoria.cpp  rejilla.cpp  vista.cpp
3_Trayectories/: CMakeLists.txt  README.md  filedata.txt  planificacion_trayectorias.depend
3_Trayectories/header/: busqueda_a_estrella.h  busqueda_amplitud.h  busqueda_coste_uniforme.h  busqueda_profundidad.h  problema_busqueda.h  vista.h
3_Trayectories/src/: controlador.cpp  nodo_trayectoria.cpp  rejilla.cpp  vista.cpp
4_Reversi/: 4_Reversi.cpp  4_Reversi.vcxproj  4_Reversi.vcxproj.filters  compile.sh
4_Reversi/header/: casilla.h  controlador.h  enumeraciones.h  nodo_reversi.h  observador.h  panel.h  posicion_reversi.h  rejilla.h  reversi.h  texturas.h  vista.h
4_Reversi/src/: casilla.cpp  controlador.cpp  nodo_reversi.cpp  panel.cpp  posicion_reversi.cpp  rejilla.cpp  reversi.cpp  vista.cpp
4_Reversi_Alpha_Beta/: CMakeLists.txt  compile.sh  filedata.txt  info.txt
4_Reversi_Alpha_Beta/header/: casilla.h  controlador.h  enumeraciones.h  nodo_reversi.h  panel.h  posicion_reversi.h  rejilla.h  reversi.h  texturas.h  vista.h
5_Pi/: 5_Pi.cpp  5_Pi.vcxproj  5_Pi.vcxproj.filters  CMakeLists.txt  compile.sh  filedata.txt
6_TSP/: 6_TSP.cpp  6_TSP.vcxproj  6_TSP.vcxproj.filters  CMakeLists.txt  compile.sh  filedata.txt  install.txt
7_Queens/: 7_Queens.cpp  7_Queens.vcxproj  7_Queens.vcxproj.filters  Queens.ods  compile.sh  filedata.txt
8_9_CSP/: 8_Queens_CSP.cpp  9_Sudoku_CSP.cpp  compile.sh  compile_queens.sh  compile_sudoku.sh  filedata_queens.txt  filedata_sudoku.txt
8_Queens_CSP/: 8_Queens_CSP.cpp  8_Queens_CSP.vcxproj  8_Queens_CSP.vcxproj.filters  compile.sh
9_Sudoku_CSP/: 9_Sudoku_CSP.cpp  9_Sudoku_CSP.vcxproj  9_Sudoku_CSP.vcxproj.filters  compile.sh  filedata.txt  sudoku.cpp  sudoku4.txt
(+77 files in other folders)
